melhora no container de contato, sistema de cores, copia e whatsapp criados, atualização em como funciona o fundo colorido para celular

--- a/index.html
+++ b/index.html
@@ -325,9 +325,10 @@
                 <span><img src="./assets/whatsapp logo.svg" alt=""></span>Entrar em contato pelo WhatsApp
             </a>
             <div class="email">
-                <h4>Clique para copiar o email</h4>
-                <div class="copiarEmail" onclick="copiarEmail()">gabriel.plautz2018@gmail.com<span><img
-                            src="./assets/clipboard icone.svg" alt=""></span></div>
+                <h4><span><img src="./assets/clipboard icone.svg" alt=""></span> Clique para copiar o email</h4>
+                <!-- <div class="copiarEmail" onclick="copiarEmail()">gabriel.plautz2018@gmail.com<span><img
+                            src="./assets/clipboard icone.svg" alt=""></span></div> -->
+                <div class="copiarEmail" onclick="copiarEmail()">gabriel.plautz2018@gmail.com</div>
             </div>
 
             <!-- <div class="whatsappContainer">
